[package]
description = "Created with Anchor"
edition = "2021"
name = "nft"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
mpl-token-metadata = {version = "1.3.3", features = ["no-entrypoint"]}
